<resources>
    <string name="app_name">My Notes</string>
    <string name="action_delete_all_notes">Delete all notes</string>
    <string name="all_notes_deleted_message">All notes deleted</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="title_activity_editor" translatable="false">EditorActivity</string>
    <string name="action_delete_note">Delete note</string>
    <string name="note_edit_text_hint">Enter your note here</string>
    <string name="editor_title_insert_new_note">New note</string>
    <string name="editor_title_edit_note">Note editor</string>
    <string name="note_updated_message">Note updated</string>
    <string name="note_deleted_message">Note deleted</string>
    <string name="no_notes_to_delete_message">There are no notes to delete</string>
    <string name="note_dummy_text" translatable="false">A dummy text</string>
    <string name="last_edited_text_view">Last edited:</string>
    <string name="dummy_date" translatable="false">yyyy-MM-dd HH:mm:ss</string>
    <string name="no_notes_msg">There are no notes to display.\n Start adding some by pressing \'+\' button below.</string>
    <string name="action_about">About</string>
    <string name="content_description_navigate_up">Navigate up</string>
    <string name="content_description_add_note">Add note</string>
    <string name="content_description_more_options">More options</string>
    <string name="title_activity_about">About My Notes</string>
    <string name="app_description">A simple &amp; open source note-taking app.</string>
    <string name="app_version_name">Version %1$s</string>
    <string name="view_on_github_button_text">View app on Github</string>
    <string name="github_repo_url" translatable="false">https://github.com/Abdallah-Abdelazim/MyNotes</string>
    <string name="playstore_url" translatable="false">https://play.google.com/store/apps/details?id=com.aa.mynotes</string>
    <string name="share_app_chooser_dialog_title">Share the app with a friend</string>
    <string name="share_app_fab_content_description">Share the app with a friend</string>
    <string name="share_app_subject">I recommend you to try this great app: %s</string>
    <string name="share_app_text">%1$s: %2$s Install it from: %3$s\n</string>
    <string name="action_share_note">Share note</string>
    <string name="share_note_chooser_dialog_title">Share note using</string>
</resources>
